--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = storage
+    remote = teagan_storage
 ['remote "storage"']
+    url = gdrive://1GuPOLdjlrWQeDCoSOJdG3vxA6WK2OGwa
+['remote "teagan_storage"']
     url = gdrive://1GuPOLdjlrWQeDCoSOJdG3vxA6WK2OGwa
